--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = os_acc
+name = os-acc
 summary = A library for attaching and detaching accelerators in OpenStack.
 description-file = README.rst
 author = OpenStack
