--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ pbr!=2.1.0,>=2.0.0 # Apache-2.0
 oslo.config>=5.1.0 # Apache-2.0
 oslo.log>=3.30.0 # Apache-2.0
 oslo.i18n>=3.15.3 # Apache-2.0
+oslo.versionedobjects>=1.28.0 # Apache-2.0
 six>=1.10.0 # MIT
 stevedore>=1.20.0 # Apache-2.0
