--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -6,4 +6,5 @@
       - openstack-python35-jobs
       - openstack-python36-jobs
       - lib-forward-testing
+      - lib-forward-testing-python3
       - release-notes-jobs-python3
