--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -4,5 +4,6 @@
       - publish-openstack-docs-pti
       - openstack-python-jobs
       - openstack-python35-jobs
+      - openstack-python36-jobs
       - lib-forward-testing
       - release-notes-jobs-python3
