--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = os-acc
 summary = A library for attaching and detaching accelerators in OpenStack.
 description-file = README.rst
 author = OpenStack
-author-email = openstack-dev@lists.openstack.org
+author-email = openstack-discuss@lists.openstack.org
 home-page = https://docs.openstack.org/
 classifier =
     Environment :: OpenStack
