--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -3,8 +3,7 @@
       - check-requirements
       - publish-openstack-docs-pti
       - openstack-python-jobs
-      - openstack-python35-jobs
-      - openstack-python36-jobs
+      - openstack-python3-train-jobs
       - lib-forward-testing
       - lib-forward-testing-python3
       - release-notes-jobs-python3
